package it.polimi.ingsw;

public class Coin {
    private AssistantCard card;

    public AssistantCard getCard() {
        return null;
    }
}
