package it.polimi.ingsw;

public enum Color {
    YELLOW,
    BLUE,
    GREEN,
    PINK,
    RED
}
