package it.polimi.ingsw;

public enum TowerColor {
    GREY,
    BLACK,
    WHITE
}
