package it.polimi.ingsw.model;

import java.util.List;

public class Cloud extends Board<Student> {

    public Cloud(List<Student> students) {
        super(students);
    }

}
