package it.polimi.ingsw.model;

import it.polimi.ingsw.model.enums.Color;

public class Professor extends Pawn<Color>{

    /** Professor's constructor
     *
     * @param color Professor's color
     */
    public Professor (Color color){
        super(color);
    }
}
