package it.polimi.ingsw.model;

import java.util.List;

public class School {

    private Player owner;

    public final Board<Student> RedDiningTable;
    public final Board<Student> GreenDiningTable;
    public final Board<Student> YellowDiningTable;
    public final Board<Student> BlueDiningTable;
    public final Board<Student> PinkDiningTable;

    public final Board<Student> entrance;
    public final Board<Professor> professorsTable;
    public final Board<Tower> towersBoard;

    public School(Player owner, List<Student> students, List<Tower> towers) {
        this.owner = owner;

        RedDiningTable = new Board<Student>();
        GreenDiningTable = new Board<Student>();
        YellowDiningTable = new Board<Student>();
        BlueDiningTable = new Board<Student>();
        PinkDiningTable = new Board<Student>();

        entrance = new Board<Student>(students);
        professorsTable = new Board<Professor>();
        this.towersBoard = new Board<Tower> (towers);
    }

    public Player getOwner(){
        return owner;
    }

    public void moveStudentDiningRoom(int index){
        switch (entrance.getPawns().get(index).getColor()) {
            case RED -> RedDiningTable.moveInPawn(index, entrance);
            case PINK -> PinkDiningTable.moveInPawn(index, entrance);
            case BLUE -> BlueDiningTable.moveInPawn(index, entrance);
            case YELLOW -> YellowDiningTable.moveInPawn(index, entrance);
            case GREEN -> GreenDiningTable.moveInPawn(index, entrance);
        }
    }

    public void moveStudentIsland(int index, Island island){
        island.moveInPawn(index, island);
    }
}
