package it.polimi.ingsw.model;

import it.polimi.ingsw.model.enums.Color;

public class Student extends Pawn<Color>{

    /** Student's constructor
     *
     * @param color Student's color
     */
    public Student (Color color){
        super(color);
    }
}
